Metadata view / Break long value for badges to avoid overflow.

--- a/web-ui/src/main/resources/catalog/style/gn_metadata.less
+++ b/web-ui/src/main/resources/catalog/style/gn_metadata.less
@@ -9,6 +9,11 @@
   table tr th {
     width: 25%;
   }
+  
+  .badge {
+    word-break: break-all;
+    white-space: normal;
+  }
 }
 
 .gn-metadata-view {
